# freeswitch-watchdog

./: Cargo.toml  README.md  freeswitch-watchdog.service  freeswitch-watchdog_0.1.3_amd64.deb
src/: main.rs
